# screencasting

./: .gitignore  Cargo.toml  README.md
screenClient/: frame_sender.txt
screenClient/src/: ffplayexample.rs  gui.rs  wiindow_and_events.rs
screencastingServer/src/: capture.rs  gui.rs  main.rs
screencastringClient/: Cargo.toml
screencastringClient/src/: main.rs
src/: capture.rs  capturer.rs  gui.rs  main.rs  make_video.rs  receiver.rs  sender.rs  server.rs  util.rs
