[package]
name = "screencasting_app"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "*", features = [
    "accesskit", # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    #    "persistence",   # Enable restoring app state when restarting the app.
] }
tokio = { version = "*", features = ["full"] }  # Per gestione asincrono
image = "0.24.9" # do not change otherwise code does not work
bincode = "*"
serde = { version = "1.0.210", features = ["derive"] }
scap = "*"
local-ip-address = "*"