[package]
name = "screencasting_app"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.29.0", features = [
    "default",
    "accesskit", # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "persistence",   # Enable restoring app state when restarting the app.
]}
tokio = { version = "*", features = ["full"] }  # Per gestione asincrono
image = "0.24.9" # do not change otherwise code does not work
bincode = "*"
serde = { version = "1.0.210", features = ["derive"] }
scap = { git = "https://github.com/CapSoftware/scap" }
local-ip-address = "*"
rdev = "*"
device_query = "2.1.0"

[target.'cfg(linux)'.dependencies]
libspa = "0.8.0"

[patch.crates-io]
libspa-sys = { git = 'https://gitlab.freedesktop.org/pipewire/pipewire-rs' }